--- a/public/administrator/student.html
+++ b/public/administrator/student.html
@@ -320,6 +320,7 @@
                         history.go(0)
                     } else {
                         alert("删除失败，学生还有课程没有结束！");
+                        history.go(0)
                     }
                 }
             });
