--- a/public/administrator/class.html
+++ b/public/administrator/class.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-
+    <script src="../laydate/laydate.js"></script>
     <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -182,6 +182,12 @@
             margin-top: 180px;
         }
     }
+
+    .startTime {
+        display: inline-block;
+        /*width:100px;*/
+    }
+
 </style>
 <script type="text/javascript">
     var courses;
@@ -271,6 +277,7 @@
             ctype = courses.result[id].ctype;
             cproperty = courses.result[id].cproperty;
             cintroduce = courses.result[id].cintroduce;
+            ctime = courses.result[id].ctime;
 
             $("#cid").val(cid);
             $('#cid').attr("readonly", "readonly");
@@ -282,6 +289,7 @@
             $("#ctype").val(ctype);
             $("#cintro").val(cintroduce);
             $("#cproperty").val(cproperty);
+            $("#ctime").val(ctime);
         });
     }
 
@@ -291,6 +299,7 @@
         var cintroduce = document.getElementById("cintro").value;
         var ctype = document.getElementById("ctype").value;
         var cproperty = document.getElementById("cproperty").value;
+        var ctime = document.getElementById("ctime").value;
 
         $.ajax({
             url: 'http://localhost:3000/course/updateCourse',
@@ -302,7 +311,8 @@
                 tid: tid,
                 ctype: ctype,
                 cproperty: cproperty,
-                cintroduce: cintroduce
+                cintroduce: cintroduce,
+                ctime: ctime
             },
             success: function (data, status, xhr) {
                 console.log(data);
@@ -320,7 +330,7 @@
         $("tr").click(function () {
             id = $(this).attr("id");
             cid = courses.result[id].cid;
-
+            console.log("aaa")
             $.ajax({
                 url: 'http://localhost:3000/course/deleteCourse',
                 type: 'get',
@@ -335,7 +345,8 @@
                         alert("删除成功！");
                         history.go(0)
                     } else {
-                        alert("删除失败！");
+                        alert("删除失败，改课程还未上完！");
+                        history.go(0)
                     }
                 }
             });
@@ -371,6 +382,21 @@
         var cintro_add = document.getElementById("cintro_add").value;
         var ctype_add = document.getElementById("ctype_add").value;
         var cproperty_add = document.getElementById("cproperty_add").value;
+        var ctime_add = document.getElementById("ctime_add").value;
+
+        var ctime_range = [];
+
+        var time1 = document.getElementById('ctime_add_time1').value
+        var time2 = document.getElementById('ctime_add_time2').value
+        var time3 = document.getElementById('ctime_add_time3').value
+        var time4 = document.getElementById('ctime_add_time4').value
+        var time5 = document.getElementById('ctime_add_time5').value
+        var time6 = document.getElementById('ctime_add_time6').value
+
+        ctime_range.push(time1, time2, time3, time4, time5, time6);
+
+        var range = ctime_range.join("|");
+
 
         $.ajax({
             url: 'http://localhost:3000/course/addCourse',
@@ -382,10 +408,12 @@
                 tid: tid_add,
                 ctype: ctype_add,
                 cproperty: cproperty_add,
-                cintroduce: cintro_add
+                cintroduce: cintro_add,
+                ctime: ctime_add,
+                ctimeRange: range
             },
             success: function (data, status, xhr) {
-                console.log(data);
+//                console.log(data);
                 if (status === "success" && data.result === 1) {
                     alert("添加成功！");
                     history.go(0);
@@ -436,6 +464,45 @@
             }
         });
     }
+
+
+    laydate.render({
+        elem: '#ctime_add'
+        , min: 0
+        , max: 7
+    });
+
+    laydate.render({
+        elem: '#ctime_add_time1'
+        , type: 'time'
+        , range: true
+    });
+    laydate.render({
+        elem: '#ctime_add_time2'
+        , type: 'time'
+        , range: true
+    });
+    laydate.render({
+        elem: '#ctime_add_time3'
+        , type: 'time'
+        , range: true
+    });
+    laydate.render({
+        elem: '#ctime_add_time4'
+        , type: 'time'
+        , range: true
+    });
+    laydate.render({
+        elem: '#ctime_add_time5'
+        , type: 'time'
+        , range: true
+    });
+    laydate.render({
+        elem: '#ctime_add_time6'
+        , type: 'time'
+        , range: true
+    });
+
 
 </script>
 <body>
@@ -614,6 +681,36 @@
                     </div>
                     <div class="form-group">
 
+                        <label class="control-label">开课时间（最近6天的课程）</label><br>
+
+                        <input id="ctime_add" type="datetime" class="startTime" name="ctime"
+                               placeholder="课程开始时间"
+                               class="form-control"/>
+
+                        <input id="ctime_add_time1" type="datetime" class="startTime" name="ctime"
+                               placeholder="第一天"
+                               class="form-control"/>
+                        <input id="ctime_add_time2" type="datetime" class="startTime" name="ctime"
+                               placeholder="第二天"
+                               class="form-control"/>
+
+                        <input id="ctime_add_time3" type="datetime" class="startTime" name="ctime"
+                               placeholder="第三天"
+                               class="form-control"/>
+                        <input id="ctime_add_time4" type="datetime" class="startTime" name="ctime"
+                               placeholder="第四天"
+                               class="form-control"/>
+
+                        <input id="ctime_add_time5" type="datetime" class="startTime" name="ctime"
+                               placeholder="第五天"
+                               class="form-control"/>
+                        <input id="ctime_add_time6" type="datetime" class="startTime" name="ctime"
+                               placeholder="第六天"
+                               class="form-control"/>
+
+                    </div>
+                    <div class="form-group">
+
                         <label class="control-label">课程简介</label>
 
                         <input id="cintro_add" type="text" name="password" class="form-control"/>
@@ -690,6 +787,13 @@
                             <option value="1">公开课</option>
                         </select>
                         </span>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">开课时间</label>
+
+                        <input id="ctime" type="datetime" name="ctime" class="form-control"/>
+
                     </div>
                     <div class="form-group">
 
