--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,15 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-image: url("./3.jpg");
+            background-image: url("./image/chat.jpg");
+            opacity: 1;
             background-repeat:no-repeat;
             background-size:cover;
         }
 
         #videos {
             position: absolute;
-            left: 30%;
+            left: 40%;
             top: 100px;
             bottom: 0;
             right: 0;
@@ -27,8 +28,8 @@
 
         #videos #me {
             display: inline-block;
-            width: 70%;
-            margin-left: 150px
+            width: 85%;
+            /*margin-left: 150px*/
         }
 
         #videos .other {
@@ -39,12 +40,13 @@
 
         #chat {
             position: absolute;
-            left: 20px;
+            left: 100px;
             top: 100px;
             bottom: 20px;
             width: 30%;
             border-radius: 7px;
             border: 1px solid darkgray;
+            background-color: whitesmoke;
         }
 
         #chat .msgIpt, #chat .fileIpt {
@@ -94,8 +96,8 @@
         }
         nav h1{
             margin:0;
-            height:80px;
-            padding-top: 20px;
+            height:50px;
+            padding-top: 10px;
             padding-left: 30px;
             background-color: #616060;
         }
@@ -112,8 +114,12 @@
     <input type="text" id="msgIpt" class="msgIpt form-control">
     <button id="sendBtn" class="sendBtn btn btn-primary">发送</button>
 </div>
+<!--<div id="videos">-->
+    <!--<video id="me" autoplay></video>-->
+<!--</div>-->
+
 <div id="videos">
-    <video id="me" autoplay></video>
+    <iframe src="https://docs.zoho.com/show/publish/060kzd432b48e7dab40f784cc288253bf1bea" width="700" height="500" ></iframe>
 </div>
 <div id="files">
 </div>
