--- a/public/student/setting.html
+++ b/public/student/setting.html
@@ -411,6 +411,7 @@
                     $("#imgShow").attr('src', data.filepath);
                     $("#spanMessage").html("上传成功");
                     sessionStorage.setItem("avatar", data.filepath)
+                    history.go(0)
                 } else {
                     $("#spanMessage").html("上传失败");
                 }
@@ -487,6 +488,12 @@
                             class="fa fa-calendar"
                             aria-hidden="true"></i>  
                         <span style="color:white;"> 预约课程 </span></a>
+                </li>
+                <li>
+                    <a class="#" href="./finishCourse.html" data-toggle="collapse" data-target="#submenu-1"><i
+                            class="fa fa-calendar"
+                            aria-hidden="true"></i>  
+                        <span style="color:white;"> 已结束课程 </span></a>
                 </li>
                 <li>
                     <a class="active" href="./setting.html" data-toggle="collapse" data-target="#submenu-1"><i
