--- a/public/student/student_home.html
+++ b/public/student/student_home.html
@@ -319,6 +319,12 @@
                         <span style="color:white;"> 预约课程 </span></a>
                 </li>
                 <li>
+                    <a class="#" href="./finishCourse.html" data-toggle="collapse" data-target="#submenu-1"><i
+                            class="fa fa-calendar"
+                            aria-hidden="true"></i>  
+                        <span style="color:white;"> 已结束课程 </span></a>
+                </li>
+                <li>
                     <a class="#" href="./setting.html" data-toggle="collapse" data-target="#submenu-1"><i
                             class="fa fa-envelope"
                             aria-hidden="true"></i> 
